--- a/Makefile.am
+++ b/Makefile.am
@@ -22,5 +22,9 @@ unitguide:
 	cd doc && make unitguide
 
 dist-hook:
-	rm -rf `find $(distdir) -name CVS -o -name "*.ascdat" -o -wholename "*music/*.ogg" -o -name asc2_dlg.zip -o -name "*~" -o -name .cvsignore`
+	if (find --help | grep -q wholename  ); then 
+		rm -rf `find $(distdir) -name CVS -o -name "*.ascdat" -o -wholename "*music/*.ogg" -o -name asc2_dlg.zip -o -name "*~" -o -name .cvsignore`
+	else
+		rm -rf `find $(distdir) -name CVS -o -name "*.ascdat" -o -name asc2_dlg.zip -o -name "*~" -o -name .cvsignore`
+	fi
 	rm -rf `find $(distdir)/data/music -name "*.ogg" `
