--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -93,11 +93,6 @@ asc_DEPENDENCIES =  \
 	$(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
 	$(top_builddir)/source/sdl/libsdl.la \
 	$(top_builddir)/source/libs/loki-0.1.6/libloki.la \
-	$(top_builddir)/source/actions/libactions.la \
-	$(top_builddir)/source/actions/libdirectunitactions.la \
-	$(top_builddir)/source/actions/libfullgameactions.la \
-	$(top_builddir)/source/actions/libmapactions.la \
-	$(top_builddir)/source/actions/libmiscactions.la \
 	$(top_builddir)/source/util/libutil.la \
 	$(top_builddir)/source/tasks/libtasks.la \
 	$(top_builddir)/source/graphics/libgraphics.la \
@@ -108,10 +103,15 @@ asc_DEPENDENCIES =  \
 	$(top_builddir)/source/widgets/libwidgets.la \
 	$(top_builddir)/source/sdl/libsdlsnd.la \
 	$(top_builddir)/source/network/libnetwork.la \
-	$(top_builddir)/source/video/libvideo.la $(am__DEPENDENCIES_1) \
+	$(top_builddir)/source/video/libvideo.la \
+	$(top_builddir)/source/actions/libactions.la \
+	$(top_builddir)/source/actions/libdirectunitactions.la \
+	$(top_builddir)/source/actions/libfullgameactions.la \
+	$(top_builddir)/source/actions/libmapactions.la \
+	$(top_builddir)/source/actions/libmiscactions.la \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -323,11 +323,6 @@ playercolor.cpp pg_mapdisplay.cpp
 asc_LDADD = $(top_builddir)/source/libs/triangul/libtriangul.la \
 $(top_builddir)/source/ai/libai.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
 $(top_builddir)/source/sdl/libsdl.la  $(top_builddir)/source/libs/loki-0.1.6/libloki.la \
-$(top_builddir)/source/actions/libactions.la  \
-$(top_builddir)/source/actions/libdirectunitactions.la  \
-$(top_builddir)/source/actions/libfullgameactions.la  \
-$(top_builddir)/source/actions/libmapactions.la  \
-$(top_builddir)/source/actions/libmiscactions.la  \
 @LUA_LOCAL_LIB@  \
 $(top_builddir)/source/util/libutil.la  $(top_builddir)/source/tasks/libtasks.la \
 $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/libdialogs.la \
@@ -335,6 +330,11 @@ $(top_builddir)/source/dialogs/libgamedialogs.la $(top_builddir)/source/actions/
 $(top_builddir)/source/libs/paragui/src/libparagui.la $(top_builddir)/source/widgets/libwidgets.la \
 $(top_builddir)/source/sdl/libsdlsnd.la $(top_builddir)/source/network/libnetwork.la  \
 $(top_builddir)/source/video/libvideo.la  \
+$(top_builddir)/source/actions/libactions.la  \
+$(top_builddir)/source/actions/libdirectunitactions.la  \
+$(top_builddir)/source/actions/libfullgameactions.la  \
+$(top_builddir)/source/actions/libmapactions.la  \
+$(top_builddir)/source/actions/libmiscactions.la  \
 @LDADDLIBBZ2@  $(SIGC_LIBS) $(SDL_LIBS) $(FREETYPE_LIBS) $(BOOST_LIBS) $(SDL_SOUND_LIB) $(LUA_LIBS)
 
 all: all-am
