--- a/source/actions/Makefile.am
+++ b/source/actions/Makefile.am
@@ -11,7 +11,7 @@ libactions_la_LIBADD		= @SDL_LIBS@
 libdirectunitactions_la_SOURCES	=  inflictdamage.cpp destructcontainer.cpp \
                           changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp consumeresource.cpp \
                           containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp consumeammo.cpp \
-                          recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp
+                          recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp repairunitcommand.cpp
 libdirectunitactions_la_LIBADD		= @SDL_LIBS@
 
 libmiscactions_la_SOURCES	= servicing.cpp jumpdrive.cpp selfdestruct.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
